--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>drag image</title>
-  <link rel="stylesheet" href="css/main.css" >
+  <link rel="stylesheet" href="css/main.css" type="text/css">
+  <script type="text/javascript" src="js/core.js" ></script>
 </head>
 <body>
   <header>
