--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>drag image</title>
   <link rel="stylesheet" href="css/main.css" type="text/css">
-  <script type="text/javascript" src="js/core.js" ></script>
+  <script type="text/javascript" src="js/main.js" ></script>
 </head>
 <body>
   <header>
